titles fixed
titles are now taking less space in a small screen so they wont overlapse

--- a/style.css
+++ b/style.css
@@ -6,14 +6,25 @@
 	height: 100vh;
 	width: 100vw;
 }
-
-#title1 {
-	padding-top: 40vh;
-	font-size: 40px;
+@media screen and (min-width: 768px) {
+	#title1 {
+		padding-top: 40vh;
+		font-size: 40px;
+	}
+	#title2 {
+		padding-bottom: 30vh;
+		font-size: 30px;
+	}
 }
-#title2 {
-	padding-bottom: 30vh;
-	font-size: 30px;
+@media screen and (max-width: 768px) {
+	#title1 {
+		padding-top: 20vh;
+		font-size: 20px;
+	}
+	#title2 {
+		padding-bottom: 15vh;
+		font-size: 15px;
+	}
 }
 
 #navbar {
